# Xqqyt_UserServer

./: .gitignore  CMakeLists.txt  LICENSE  MySqlConnPool_example.json  README.md  Server.cpp  Server.h  main.cpp
MsgHandler/: CMakeLists.txt
MsgHandler/include/: BinaryStrategy.h  GlobalEnum.h  JsonEncoder.h  JsonHandler.h  JsonStrategy.h  MsgBuilder.h  MsgDecoder.h
MsgHandler/source/: BinaryStrategy.cpp  JsonEncoder.cpp  JsonHandler.cpp  JsonStrategy.cpp  MsgBuilder.cpp  MsgDecoder.cpp
MySqlConnPool/: CMakeLists.txt
MySqlConnPool/include/: MySqlConnPool.h  MySqlDriver.h  SqlConnSet.h  SqlException.h
MySqlConnPool/source/: MySqlConnPool.cpp  MySqlDriver.cpp  SqlConnSet.cpp
Security/: CMakeLists.txt
Security/include/: OpensslHandler.h
Security/source/: OpensslHandler.cpp
TcpServer/: CMakeLists.txt
TcpServer/include/: TcpServer.h
TcpServer/source/: TcpServer.cpp
ThreadPool/: CMakeLists.txt  PriorityQueue.hpp  Queue.h  ThreadPool.cpp  ThreadPool.hpp  ThreadQueue.hpp
sql/: user_db.sql
